--- a/package.json
+++ b/package.json
@@ -2,20 +2,42 @@
   "name": "dofus-bot",
   "version": "0.1.0",
   "private": true,
+  "description": "Mother Fucking Bot",
+  "author": "Matusalém & Ximit",
+  "build": {
+    "appId": "<com.your_app>"
+  },
+  "main": "public/electron.js",
+  "homepage": "./",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
+    "cross-env": "^7.0.2",
+    "electron-is-dev": "^1.2.0",
+    "frameless-titlebar": "^2.1.4",
+    "prebuild": "^10.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-select": "^3.1.1",
+    "rodal": "^1.8.1",
+    "sqlite3": "^5.0.0",
+    "underscore": "^1.12.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test --env=jsdom",
+    "react-eject": "react-scripts eject",
+    "electron-build": "electron-builder",
+    "release": "yarn react-build && electron-builder --publish=always",
+    "build": "yarn react-build && yarn electron-build",
+    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +56,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "electron": "^11.0.1",
+    "electron-builder": "^22.9.1",
+    "wait-on": "^5.2.0"
+  },
+  "resolutions": {
+    "@babel/runtime": "7.0.0-beta.46"
   }
 }
